test/good/nullables/op09.px

func f(Int i) Int def
    print i
    return i

[Int]? a = [3, 5]
print a?[f(0)], a![f(1)]

a = null
print a?[f(0)]
