test/bad/nullables/nullable04.px

func f() [Int] def
    return null
